--- a/Engine/pom.xml
+++ b/Engine/pom.xml
@@ -1,54 +1,173 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+      <modelVersion>4.0.0</modelVersion>
+      <groupId>com.mypackage</groupId>
+      <artifactId>jme-sample</artifactId>
+      <packaging>jar</packaging>
+      <version>1.0-SNAPSHOT</version>
+      <name>jme-sample</name>
+      <properties>
+          <main.class>fi.nje.games.EngineMain</main.class>
+          <jme2.home>/home/viirus/Projects/jmonkey/trunk</jme2.home>
+          <lwjgl.natives>${jme2.home}/lib/lwjgl/native</lwjgl.natives>
+		<lwjgl.version>2.1</lwjgl.version>
+      </properties>
+      <build>
+          <plugins>
+              <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>2.0.2</version>
+                  <configuration>
+                      <source>1.5</source>
+                      <target>1.5</target>
+                      <encoding>UTF-8</encoding>
+                  </configuration>
+              </plugin>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-jar-plugin</artifactId>
+                  <configuration>
+                      <archive>
+                          <manifest>
+                              <mainClass>${main.class}</mainClass>
+                              <addClasspath>true</addClasspath>
+                              <classpathPrefix>lib/</classpathPrefix>
+                          </manifest>
+                      </archive>
+                  </configuration>
+              </plugin>
+              <plugin>
+                  <artifactId>maven-assembly-plugin</artifactId>
+                  <version>2.2-beta-5</version>
+                          <configuration>
+                              <descriptors>
+                                  <descriptor>assembly.xml</descriptor>
+                              </descriptors>
+                          </configuration>
+                  <executions>
+                      <execution>
+                          <id>bundle-project-sources</id>
+                          <phase>package</phase>
+                          <goals>
+                              <goal>single</goal>
+                          </goals>
 
-  <parent>
-    <groupId>com.cedarsoft</groupId>
-    <artifactId>open</artifactId>
-    <version>4.0.2</version>
-  </parent>
-
-  <groupId>fi.nje.games</groupId>
-  <artifactId>Engine</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <scm>
-    <connection>scm:git:git://git.cedarsoft.com/fi.nje.games.Engine</connection>
-    <developerConnection>scm:git:ssh://git.cedarsoft.com/home/git/fi.nje.games.Engine</developerConnection>
-  </scm>
-
-  <dependencies>
-    <!--Guava-->
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-
-    <!--NotNull Annotations-->
-    <dependency>
-      <groupId>com.intellij</groupId>
-      <artifactId>annotations</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <!--Test Dependencies-->
-    <dependency>
-      <groupId>com.cedarsoft.commons</groupId>
-      <artifactId>test-utils</artifactId>
-      <version>3.0.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-  </dependencies>
-
-  <mailingLists>
-    <mailingList>
-      <name>Mail Support</name>
-      <post>info@cedarsoft.com</post>
-    </mailingList>
-  </mailingLists>
-
-</project>
+                      </execution>
+                  </executions>
+              </plugin>
+              <plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>exec-maven-plugin</artifactId>
+                  <version>1.1</version>
+                  <executions>
+                      <execution>
+                          <goals>
+                              <goal>exec</goal>
+                          </goals>
+                      </execution>
+                  </executions>
+                  <configuration>
+                      <systemProperties>
+                          <systemProperty>
+                              <key>org.lwjgl.librarypath</key>
+                              <value>${lwjgl.native}</value>
+                          </systemProperty>
+                      </systemProperties>
+                      <mainClass>${main.class}</mainClass>
+                      <argument>-classpath</argument>
+                      <!-- automatically creates the classpath using all project dependencies,
+                      also adding the project build directory-->
+                      <classpath/>
+                  </configuration>
+              </plugin>
+          </plugins>
+      </build>
+      <dependencies>
+           <dependency>
+              <groupId>com.jmonkeyengine</groupId>
+              <artifactId>jme</artifactId>
+              <version>2.0-SNAPSHOT</version>
+          </dependency>
+    
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl</artifactId>
+            <version>${lwjgl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl_util_applet</artifactId>
+            <version>${lwjgl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl_util</artifactId>
+            <version>${lwjgl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jogl</groupId>
+            <artifactId>jogl</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.gluegen</groupId>
+            <artifactId>gluegen-rt</artifactId>
+            <version>1.0b06</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jinput</groupId>
+            <artifactId>jinput</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>jorbis</groupId>
+            <artifactId>jorbis</artifactId>
+            <version>0.0.17</version>
+        </dependency>
+ 
+          <dependency>
+              <groupId>junit</groupId>
+              <artifactId>junit</artifactId>
+              <version>4.5</version>
+              <scope>test</scope>
+          </dependency>
+      </dependencies>
+      <profiles>
+          <profile>
+              <id>linux</id>
+              <activation>
+                  <os>
+                      <family>unix</family>
+                      <name>linux</name>
+                  </os>
+              </activation>
+              <properties>
+                  <lwjgl.native>${lwjgl.natives}/linux</lwjgl.native>
+              </properties>
+          </profile>
+          <profile>
+              <id>macosx</id>
+              <activation>
+                  <os>
+                      <family>unix</family>
+                      <name>mac os x</name>
+                  </os>
+              </activation>
+              <properties>
+                  <lwjgl.native>${lwjgl.natives}/macosx</lwjgl.native>
+              </properties>
+          </profile>
+          <profile>
+              <id>win32</id>
+              <activation>
+                  <os>
+                      <arch>x86</arch>
+                      <family>windows</family>
+                  </os>
+              </activation>
+              <properties>
+                  <lwjgl.native>${lwjgl.natives}/win32</lwjgl.native>
+              </properties>
+          </profile>
+      </profiles>
+  </project>
