--- a/Data/pom.xml
+++ b/Data/pom.xml
@@ -1,54 +1,46 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>com.cedarsoft</groupId>
-    <artifactId>open</artifactId>
-    <version>4.0.2</version>
-  </parent>
-
-  <groupId>fi.nje.games</groupId>
-  <artifactId>Data</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <scm>
-    <connection>scm:git:git://git.cedarsoft.com/fi.nje.games.Data</connection>
-    <developerConnection>scm:git:ssh://git.cedarsoft.com/home/git/fi.nje.games.Data</developerConnection>
-  </scm>
-
-  <dependencies>
-    <!--Guava-->
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-
-    <!--NotNull Annotations-->
-    <dependency>
-      <groupId>com.intellij</groupId>
-      <artifactId>annotations</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <!--Test Dependencies-->
-    <dependency>
-      <groupId>com.cedarsoft.commons</groupId>
-      <artifactId>test-utils</artifactId>
-      <version>3.0.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-  </dependencies>
-
-  <mailingLists>
-    <mailingList>
-      <name>Mail Support</name>
-      <post>info@cedarsoft.com</post>
-    </mailingList>
-  </mailingLists>
-
-</project>
+<?xml version="1.0" encoding="UTF-8"?>
+  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+      <modelVersion>4.0.0</modelVersion>
+      <groupId>fi.nje.games</groupId>
+      <artifactId>Data</artifactId>
+      <packaging>jar</packaging>
+      <version>1.0-SNAPSHOT</version>
+      <name>Data</name>
+      <properties>
+          <jme2.home>/home/viirus/Projects/jmonkey/trunk</jme2.home>
+      </properties>
+      <build>
+          <plugins>
+              <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>2.0.2</version>
+                  <configuration>
+                      <source>1.5</source>
+                      <target>1.5</target>
+                      <encoding>UTF-8</encoding>
+                  </configuration>
+              </plugin>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-jar-plugin</artifactId>
+                  <configuration>
+                      <archive>
+                          <manifest>
+                              <mainClass>${main.class}</mainClass>
+                              <addClasspath>true</addClasspath>
+                              <classpathPrefix>lib/</classpathPrefix>
+                          </manifest>
+                      </archive>
+                  </configuration>
+              </plugin>
+          </plugins>
+      </build>
+      <dependencies> 
+          <dependency>
+              <groupId>junit</groupId>
+              <artifactId>junit</artifactId>
+              <version>4.5</version>
+              <scope>test</scope>
+          </dependency>
+      </dependencies>
+  </project>
