--- a/Engine/pom.xml
+++ b/Engine/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
   <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
       <modelVersion>4.0.0</modelVersion>
-      <groupId>com.mypackage</groupId>
-      <artifactId>jme-sample</artifactId>
+      <groupId>fi.nje.games</groupId>
+      <artifactId>Engine</artifactId>
       <packaging>jar</packaging>
       <version>1.0-SNAPSHOT</version>
-      <name>jme-sample</name>
+      <name>Engine</name>
       <properties>
           <main.class>fi.nje.games.EngineMain</main.class>
           <jme2.home>/home/viirus/Projects/jmonkey/trunk</jme2.home>
@@ -36,7 +36,7 @@
                       </archive>
                   </configuration>
               </plugin>
-              <plugin>
+              <plugin>			      
                   <artifactId>maven-assembly-plugin</artifactId>
                   <version>2.2-beta-5</version>
                           <configuration>
