go tests go.. time to fetch data from app.

--- a/Engine/.classpath
+++ b/Engine/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="assets"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/home/viirus/Projects/jmonkey3/jMonkeyEngine3.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Data"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
